--- a/Style/master.css
+++ b/Style/master.css
@@ -25,17 +25,17 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-@media(min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .container {
     width: 750px;
   }
 }
-@media(min-width: 991px) and (max-width: 1200px){
+@media (min-width: 991px) and (max-width: 1200px) {
   .container {
     width: 980px;
   }
 }
-@media(min-width: 1200px) {
+@media (min-width: 1200px) {
   .container {
     width: 1170px;
   }
@@ -55,7 +55,7 @@ a {
   background-color: transparent;
   width: fit-content;
   padding: 0 10px;
-  color:  #0c7dff;
+  color: #0c7dff;
   border: 5px solid #0c1dff;
   margin-bottom: 100px;
   z-index: 333;
@@ -96,7 +96,7 @@ a {
   width: 52%;
   height: 102%;
 }
-@media(max-width: 768px) {
+@media (max-width: 768px) {
   .main-heading {
     font-size: 25px;
   }
@@ -118,7 +118,7 @@ header .container .logo {
 }
 header .container .logo img {
   width: 100px;
-  height: 60px; 
+  height: 60px;
 }
 header .container .links {
   display: flex;
@@ -183,7 +183,7 @@ header .container .list .list-bottom {
     position: absolute;
     z-index: 1111;
     width: 100%;
-    background-color: rgb(0 0 0 / .5);
+    background-color: rgb(0 0 0 / 0.5);
     left: 0;
   }
   header .container .links li:before {
@@ -194,7 +194,7 @@ header .container .list .list-bottom {
 /* Start Home */
 .home {
   /* background-image: url("../images/Home.jpg"); */
-  background-image: url('../images/Home.jpg');
+  background-image: url("../images/Home.jpg");
   /* background-image: url('../images/white-back.jpg'); */
   background-size: cover;
   min-height: 80vh;
@@ -259,7 +259,7 @@ header .container .list .list-bottom {
   color: rgb(224, 191, 6);
   font-size: 25px;
 }
-@media(max-width: 600px) {
+@media (max-width: 600px) {
   .home .text {
     width: 100%;
     position: absolute;
@@ -293,7 +293,7 @@ header .container .list .list-bottom {
   border-radius: 6px;
   height: fit-content;
   position: relative;
-} 
+}
 .services .container .hard {
   background-image: url(../images/hardware-back.jpg);
 }
@@ -325,7 +325,7 @@ header .container .list .list-bottom {
   border: 1px solid #eee;
   border-radius: 10px;
   backdrop-filter: blur(10px);
-} 
+}
 .services .container .hard p {
   color: rgb(4, 150, 218);
 }
@@ -420,68 +420,12 @@ header .container .list .list-bottom {
   width: 100%;
   height: 10px;
 }
-/* .devices .container .gallery {
-  color: white;
-} */
-.devices .container .gallery .choices {
-  display: flex;
-  justify-content: center;
-}
-.devices .container .gallery .choices li {
-  padding: 10px;
-  cursor: pointer;
-}
-.devices .container .gallery .choices li.active {
-  background-color: green;
-  margin: 2px;
-  color: white;
-}
-.devices .container .gallery .master-img img {
-  width: 100%;
-  height: 760px;
-  height: 0;
-}
-.devices .container .gallery .master-img .specs {
-  position: relative;
-  left: 50%;
-  transform: translate(-50%);
-  cursor: pointer;
-  margin: 20px 0;
-  padding: 10px;
-  display: none;
-  background:linear-gradient(70deg, #c31f9f 20%, #257ed0 50%);
-  border: none;
-  border-radius: 4px;
-  color: white;
-  font-weight: bold;
-}
-.devices .container .gallery .master-img .specs:hover {
-  box-shadow: 2px 2px 10px 5px #ff2cd1;
-}
-.devices .container .gallery .thumbnails {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 5px;
-  margin-bottom: 50px;
-}
-.devices .container .gallery .thumbnails img {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  opacity: 0.7;
-  margin: 0;
-}
-.devices .container .gallery .thumbnails img:hover, 
-.devices .container .gallery .thumbnails img.active {
-  opacity: 1;
-  border: 1px solid green;
-} 
 .devices .container .specs-laptops,
 .devices .container .specs-tablets,
 .devices .container .specs-mobiles,
 .devices .container .specs-PC {
   display: none;
-} 
+}
 .devices .container .specs .specs-laptop {
   display: flex;
   gap: 10px;
@@ -514,7 +458,7 @@ header .container .list .list-bottom {
 }
 .devices .container .select ul.select-specs {
   display: none;
-  background-color: /*rgb(0, 149, 255)*/ #333;
+  background-color: #333;
   width: 200px;
   margin-top: 19px;
   border-radius: 10px;
@@ -530,7 +474,7 @@ header .container .list .list-bottom {
   height: 25px;
   left: 50%;
   top: -25px;
-  background-color: /*rgb(0, 149, 255)*/ #333;
+  background-color: #333;
   clip-path: polygon(0 1%, 53% 56%, 100% 0);
   position: absolute;
   transform: translate(-50%) rotate(180deg);
@@ -564,7 +508,7 @@ header .container .list .list-bottom {
   transform: translate(-50%);
 }
 
-@media(min-width: 768px) {
+@media (min-width: 768px) {
   .devices .container .select ul.select-specs {
     width: 100%;
   }
@@ -578,9 +522,18 @@ header .container .list .list-bottom {
     }
   }
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .devices .container .specs .specs-laptop {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    .inner-specs {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
 /* End Gallery */
-
-
 
 /* Programs */
 .programs {
@@ -618,6 +571,10 @@ header .container .list .list-bottom {
   height: fit-content;
 }
 
+.programs .container .code-snippet {
+  color: black;
+}
+
 .programs .container * {
   margin: 5px 0px;
 }
@@ -647,7 +604,7 @@ header .container .list .list-bottom {
   }
 }
 
-footer  {
+footer {
   background-color: rgb(3, 49, 3);
   color: white;
   padding: 10px;
@@ -674,5 +631,4 @@ footer  {
   cursor: pointer;
   background-color: black;
   color: white;
-  /* display: none; */
 }
